--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                             <th>Description</th>
                             <th>Amount</th>
                             <th>Deduction Period</th>
-                            <th></th>
+                            <th>Paid?</th>
                             <th></th>
                             <th></th>
                         </tr>
