--- a/index.html
+++ b/index.html
@@ -349,6 +349,12 @@
                 <button id="addCategoryBtn" type="button" class="btn btn-primary">Add Category</button>
             </div>
 
+            <div style="text-align:center; margin-bottom:1em;">
+                <button id="exportBtn" class="btn btn-success">Export Data</button>
+                <button id="importBtn" class="btn btn-info">Import Data</button>
+                <input type="file" id="importFileInput" style="display:none" accept=".json" />
+            </div>
+
             <div id="addModal"
                 style="display:none; position:fixed; z-index:9999; left:0; top:0; width:100vw; height:100vh; background:rgba(0,0,0,0.4); align-items:center; justify-content:center;">
                 <div
@@ -453,6 +459,8 @@
 
     <script src="js/default-assets/active.js"></script>
 
+
+    <!-- Modal/Breakdown Logic -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Modal logic
@@ -841,9 +849,6 @@
                 });
             };
 
-            // Remove "Add Item" button if not needed
-            document.getElementById('addItemBtn').style.display = 'none';
-
             // Save on direct edits
             document.querySelectorAll('.commitments-table').forEach(table => {
                 table.addEventListener('input', function (e) {
@@ -853,10 +858,53 @@
                     }
                 });
             });
-        });
-    </script>
+            
+        // --- Export/Import Logic ---
+        document.getElementById('exportBtn').onclick = function () {
+            const data = {
+                table: getTableData(),
+                allocated: allocatedAmountInput.value
+            };
+            const blob = new Blob([JSON.stringify(data, null, 2)], { type: "application/json" });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = "commitments-export.json";
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+            URL.revokeObjectURL(url);
+        };
 
+        document.getElementById('importBtn').onclick = function () {
+            document.getElementById('importFileInput').click();
+        };
 
+        document.getElementById('importFileInput').onchange = function (e) {
+            const file = e.target.files[0];
+            if (!file) return;
+            const reader = new FileReader();
+            reader.onload = function (evt) {
+                try {
+                    const data = JSON.parse(evt.target.result);
+                    if (data.table && data.allocated !== undefined) {
+                        setTableData(data.table);
+                        allocatedAmountInput.value = data.allocated;
+                        saveAllocatedAmount();
+                        saveTableToLocalStorage();
+                        recalcTotals();
+                        alert("Data imported!");
+                    } else {
+                        alert("Invalid file format.");
+                    }
+                } catch (err) {
+                    alert("Failed to import: " + err);
+                }
+            };
+            reader.readAsText(file);
+        };
+    });
+</script>
 
 
 </body>
