--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@
 
     <script src="js/default-assets/active.js"></script>
 
+    <script src="js/dstabs.js"></script>
+
     <script src="js/ct/breakdown.js"></script>
 
 
